Fix some spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -76,10 +76,9 @@ hr {
   width: 50%;
 }
 .content {
-  overflow: auto;
-  padding-top: 50px;
-  padding-right: 100px;
-  margin-left: 50%;
+  overflow: hidden;
+  padding: 50px;
+  margin-left: 45%;
   text-align: center;
 }
 .donations {
@@ -138,8 +137,6 @@ hr {
     display: none;
   }
   .content {
-    width: 100%;
     margin: 0;
-    padding: 50px 0 80px;
   }
 }
